# cmake_installproject

./: CMakeLists.txt  README.md
common/: CMakeLists.txt  function.hpp  types.hpp  validator.cpp
configparser/: configparse.hpp
derivator/: CMakeLists.txt  derivatives.conf  derivator.cpp
integrator/: CMakeLists.txt  integrals.conf  integrator.cpp
test/: CMakeLists.txt  test_function.cpp
